static/css/custom.css
.main-paragraph {
  /* todo use Sass or some other css processor to reuse rules */
  margin-top: 56px !important; /* rf-margin-top-7N */
  margin-bottom: 64px !important; /* rf-margin-bottom-8N */
}

.sub-paragraph {
  /* todo use Sass or some other css processor to reuse rules */
  margin-top: 24px !important; /* rf-margin-top-3N */
  margin-bottom: 56px !important; /* rf-margin-bottom-7N */
}

/* Todo : use callouts from the design system instead of home-made paragraphs ? */

.error-text {
  color: var(--error);
}

.notification {
  border: 1px solid var(--g800);
  border-radius: 3px;
  padding: 16px;
  margin-bottom: 16px;
}

.notification.error {
  border-color: var(--error);
}

.notification.info {
  border-color: var(--info);
}

.notification.success {
  border-color: var(--success);
}


.rf-bg--alt {
  background-color: var(--bf500);
}

#advantages, #advantages h3 {
  color: var(--bd500);
  text-align: center;
}

